2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 2048-deployment
  name: 2048-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2048-deployment
  template:
    metadata:
      labels:
        app: 2048-deployment
    spec:
      containers:
      - image: alexwhen/docker-2048
        name: 2048game
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: 2048-deployment
  name: game-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: 2048-deployment
  type: ClusterIP
