loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment
  name: loadbalancer
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30000
  selector:
    app: nginx-deployment
  type: LoadBalancer
