nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - name: 8080-80
    nodePort: 30000
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment
  type: NodePort
